kubernetes-dbless/jqm-deployment.yml
# This file describes a k8s deployment that will create pods containing the JQM-Standalone image.
#
# You will need to also apply the LoadBalancer service config to make these pods reachable.

apiVersion: apps/v1
kind: Deployment
metadata:
    name: jqm
    labels:
        app: jqm
spec:
    replicas: 4
    selector:
        matchLabels:
            app: jqm
    template:
        metadata:
            labels:
                app: jqm
        spec:
            containers:
                - name: jqm
                  image: enioka/jqm-standalone
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 1789
                  livenessProbe:
                      httpGet:
                          path: /ws/simple/localnode/health
                          port: 1789
                      initialDelaySeconds: 10
                      periodSeconds: 15
                  readinessProbe:
                      httpGet:
                          path: /ws/simple/localnode/health
                          port: 1789
                      initialDelaySeconds: 5
                      periodSeconds: 10
